[tool.poetry]
name = "pynescript"
version = "0.1.0"
description = "Pynescript"
authors = ["Yunseong Hwang <kika1492@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/elbakramer/pynescript"
repository = "https://github.com/elbakramer/pynescript"
documentation = "https://pynescript.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/elbakramer/pynescript/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
pyparsing = ">=3.0.9"
requests = ">=2.28.1"
tqdm = ">=4.64.1"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.13.0"
black = ">=22.8.0"
coverage = {extras = ["toml"], version = ">=6.4.4"}
darglint = ">=1.8.1"
flake8 = ">=5.0.4"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=22.9.23"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.7"
furo = ">=2022.9.15"
isort = ">=5.10.1"
mypy = ">=0.971"
pep8-naming = ">=0.13.2"
pre-commit = ">=2.20.0"
pre-commit-hooks = ">=4.3.0"
pytest = ">=7.1.3"
pyupgrade = ">=2.38.0"
safety = ">=2.2.0"
Sphinx = ">=5.2.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=4.3.0"
typeguard = ">=2.13.3"
xdoctest = ">=1.1.0"
myst-parser = ">=0.18.0"

[tool.poetry.scripts]
pynescript = "pynescript.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pynescript", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
multi_line_output = 3
lines_between_types = 1

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
